[package]
name = "runo-search"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
regex = "1"
memmap2 = "0.9"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
